so the getfile and deletefile services added to the project successfuly
